css/main.sass
---
---

@import "autocomplete"
@import "syntax-highlighting"
@import "search"
@import "mdl-refactoring"
@import "header"
@import "footer"
@import "gist"

$font-color: #424242

blockquote p
  margin-bottom: 0

.search-background
  background-image: url("/assets/images/search-bg.jpg")
  background-position: -700px
  border-radius: 8px
  padding: 70px 20px
  margin: 0px 30px 80px 30px

.doc-center
  text-align: center
  padding: 20px 0px 50px 0px
  a
    margin: 20px 0px 20px 0px
    font-weight: 900
    font-size: 40px

body
  color: $font-color
  font-weight: 400

a
  text-decoration: none

code
  font-family: 'Inconsolata', monospace
  border-radius: 0
  font-size: 100%
  padding: 2px 4px
  color: #c7254e
  background-color: #f9f2f4

pre
  display: block
  padding: 9.5px
  margin: 0 0 10px
  font-size: 13px
  border: 0
  background-color: #272822
  color: white
  border-radius: 0
  code
    padding: 0
    font-size: inherit
    color: inherit
    white-space: pre-wrap
    background-color: transparent

h1, h2, h3
  font-weight: 500

h1
  font-size: 200%
  color: $font-color

h2
  font-size: 170%
  color: $font-color

h3
  font-size: 130%
  color: $font-color

.github-edit
  a
    opacity: 0.5
    font-size: 12px
    color: #888
  a:hover
    text-decoration: none
    color: #222

.modified-at
  opacity: 0.5
  font-size: 12px
  color: #888

.fa-rss
  color: #fa9b39

details
  padding: 6px 0

details[open]
  font-weight: bold
  li
    list-style: none
    margin-left: 10%
    padding: 0

.breadcrumb
  list-style: none
  overflow: hidden
  font: 12px Sans-Serif
  margin-top: 15px
  margin-bottom: 32px

.breadcrumb li 
  float: right

.breadcrumb li a
  color: white
  text-decoration: none
  background: brown
  background: hsla(195,85%,35%,1) 
  position: relative
  display: block
  float: right
  padding: 10px 19px 10px 18px

.breadcrumb li a::after
  content: " "
  display: block
  width: 0
  height: 0
  border-top: 50px solid transparent
  border-bottom: 50px solid transparent
  border-right: 20px solid hsla(195,85%,35%,1)
  position: absolute
  top: 50%
  margin-top: -50px
  right: 100%
  z-index: 2

.breadcrumb li a::before
  content: " "
  display: block
  width: 0
  height: 0
  position: absolute
  top: 50%
  margin-top: -50px
  right: 100%
  z-index: 1

.breadcrumb li:nth-child(2) a
  background: hsla(195,85%,45%,1)
  padding-right: 40px

.breadcrumb li:nth-child(2) a:after
  border-right-color: hsla(195,85%,45%,1)

.breadcrumb li:nth-child(3) a
  background: hsla(195,85%,55%,1)
  padding-right: 40px

.breadcrumb li:nth-child(3) a:after
  border-right-color: hsla(195,85%,55%,1)

.breadcrumb li:nth-child(4) a
  background: hsla(195,85%,65%,1)
  padding-right: 40px

.breadcrumb li:nth-child(4) a:after
  border-right-color: hsla(195,85%,65%,1)

.breadcrumb li:last-child a::after
  border: 0

.breadcrumb li a:hover
  background: hsla(195, 85%, 25%, 1)

.breadcrumb li a:hover:after
  border-right-color: hsla(195, 85%, 25%, 1) !important

.menu
  h1
    margin: 30px 0px

